--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             text-align: center;
             margin-top: 20px;
         }
+        #ascendantText, #placementsText {
+            width: 80%;
+            margin: 20px auto;
+            text-align: right;
+            font-size: 1.2em;
+        }
     </style>
 </head>
 <body>
@@ -51,6 +57,11 @@
     </form>
     <div id="errorMessage" style="display: none;">فشل تحميل البيانات. يرجى التحقق من الإدخال الخاص بك.</div>
     <div id="chartContainer"></div>
+    <div id="ascendantText" style="display: none;">الطالع: <span id="ascendantDisplay"></span></div>
+    <div id="placementsText" style="display: none;">
+        <h2>الطوالع والكواكب</h2>
+        <ul id="placementsList"></ul>
+    </div>
     <h2>بيانات الكواكب والطالع</h2>
     <table id="dataTable" style="display: none;">
         <thead>
@@ -97,52 +108,73 @@
             };
         }
 
-      function populateTable(apiData) {
-    const tableBody = document.querySelector("#dataTable tbody");
-    tableBody.innerHTML = "";
+        function populateTable(apiData) {
+            const tableBody = document.querySelector("#dataTable tbody");
+            tableBody.innerHTML = "";
 
-    const planets = apiData.planets || [];
-    const houses = apiData.houses || [];
+            const planets = apiData.planets || [];
+            const houses = apiData.houses || [];
 
-    console.log("Planets for Table:", planets);
-    console.log("Houses for Table:", houses);
+            console.log("Planets for Table:", planets);
+            console.log("Houses for Table:", houses);
 
-    // Populate planets
-    planets.forEach((planet) => {
-        const row = document.createElement("tr");
-        const nameCell = document.createElement("td");
-        const degreeCell = document.createElement("td");
-        const signCell = document.createElement("td");
+            // Populate planets
+            planets.forEach((planet) => {
+                const row = document.createElement("tr");
+                const nameCell = document.createElement("td");
+                const degreeCell = document.createElement("td");
+                const signCell = document.createElement("td");
 
-        nameCell.textContent = planet.name;
-        degreeCell.textContent = `${planet.position.toFixed(2)}°`;
-        signCell.textContent = planet.zodiac_sign;
+                nameCell.textContent = planet.name;
+                degreeCell.textContent = `${planet.position.toFixed(2)}°`;
+                signCell.textContent = planet.zodiac_sign;
 
-        row.appendChild(nameCell);
-        row.appendChild(degreeCell);
-        row.appendChild(signCell);
-        tableBody.appendChild(row);
-    });
+                row.appendChild(nameCell);
+                row.appendChild(degreeCell);
+                row.appendChild(signCell);
+                tableBody.appendChild(row);
+            });
 
-    // Populate houses
-    houses.forEach((house) => {
-        const row = document.createElement("tr");
-        const houseCell = document.createElement("td");
-        const degreeCell = document.createElement("td");
-        const signCell = document.createElement("td");
+            // Populate houses
+            houses.forEach((house) => {
+                const row = document.createElement("tr");
+                const houseCell = document.createElement("td");
+                const degreeCell = document.createElement("td");
+                const signCell = document.createElement("td");
 
-        houseCell.textContent = `بيت ${house.house}`;
-        degreeCell.textContent = `${house.degree.toFixed(2)}°`;
-        signCell.textContent = house.zodiac_sign;
+                houseCell.textContent = `بيت ${house.house}`;
+                degreeCell.textContent = `${house.degree.toFixed(2)}°`;
+                signCell.textContent = house.zodiac_sign;
 
-        row.appendChild(houseCell);
-        row.appendChild(degreeCell);
-        row.appendChild(signCell);
-        tableBody.appendChild(row);
-    });
+                row.appendChild(houseCell);
+                row.appendChild(degreeCell);
+                row.appendChild(signCell);
+                tableBody.appendChild(row);
+            });
 
-    document.getElementById("dataTable").style.display = "table";
-}
+            document.getElementById("dataTable").style.display = "table";
+        }
+
+        function displayAscendantAndPlacements(apiData) {
+            // Display Ascendant
+            const ascendantText = document.getElementById("ascendantText");
+            const ascendantDisplay = document.getElementById("ascendantDisplay");
+            ascendantDisplay.textContent = `${apiData.ascendant.degree.toFixed(2)}° - ${apiData.ascendant.zodiac_sign}`;
+            ascendantText.style.display = "block";
+
+            // Display placements
+            const placementsText = document.getElementById("placementsText");
+            const placementsList = document.getElementById("placementsList");
+            placementsList.innerHTML = "";
+
+            apiData.planets.forEach((planet) => {
+                const listItem = document.createElement("li");
+                listItem.textContent = `${planet.name}: ${planet.position.toFixed(2)}° - ${planet.zodiac_sign}`;
+                placementsList.appendChild(listItem);
+            });
+
+            placementsText.style.display = "block";
+        }
 
         document.getElementById("chartForm").addEventListener("submit", async function (event) {
             event.preventDefault();
@@ -177,8 +209,9 @@
                 chart.radix(chartData);
                 chartContainer.style.display = "block";
 
-                // Populate table
+                // Populate table and display placements
                 populateTable(apiData);
+                displayAscendantAndPlacements(apiData);
             } catch (error) {
                 console.error("Error fetching or rendering chart data:", error);
                 errorMessage.style.display = "block";
