--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 20px auto;
             border: 1px solid black;
             display: none;
+            position: relative;
         }
         #dataTable {
             width: 80%;
@@ -22,21 +23,6 @@
         #dataTable th, #dataTable td {
             border: 1px solid black;
             padding: 10px;
-        }
-        h1, h2 {
-            text-align: center;
-        }
-        form {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        input, button {
-            margin: 5px;
-        }
-        #errorMessage {
-            color: red;
-            text-align: center;
-            margin-top: 20px;
         }
         .tooltip {
             position: absolute;
@@ -63,17 +49,6 @@
     <div id="errorMessage" style="display: none;">فشل تحميل البيانات. يرجى التحقق من الإدخال الخاص بك.</div>
     <div id="chartContainer"></div>
     <div class="tooltip" id="chartTooltip"></div>
-    <h2>بيانات الكواكب والطالع</h2>
-    <table id="dataTable" style="display: none;">
-        <thead>
-            <tr>
-                <th>الجسم الفلكي</th>
-                <th>الدرجة</th>
-                <th>البرج</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
     <script>
         function mapApiData(apiData) {
             const planetNameMapping = {
@@ -109,6 +84,46 @@
             };
         }
 
+        function setupHover(chartContainer, planets, houses) {
+            const tooltip = document.getElementById("chartTooltip");
+            
+            chartContainer.addEventListener("mousemove", (event) => {
+                const rect = chartContainer.getBoundingClientRect();
+                const x = event.clientX - rect.left;
+                const y = event.clientY - rect.top;
+
+                const hoveredItem = detectHover(x, y, planets, houses);
+
+                if (hoveredItem) {
+                    tooltip.textContent = hoveredItem;
+                    tooltip.style.left = `${event.pageX + 10}px`;
+                    tooltip.style.top = `${event.pageY + 10}px`;
+                    tooltip.style.display = "block";
+                } else {
+                    tooltip.style.display = "none";
+                }
+            });
+        }
+
+        function detectHover(x, y, planets, houses) {
+            const tolerance = 20; // Tolerance in pixels for detecting a "hover"
+            for (const planet of planets) {
+                const dx = Math.abs(planet.x - x);
+                const dy = Math.abs(planet.y - y);
+                if (dx <= tolerance && dy <= tolerance) {
+                    return `${planet.name}: ${planet.position.toFixed(2)}° - ${planet.zodiac_sign}`;
+                }
+            }
+            for (const house of houses) {
+                const dx = Math.abs(house.x - x);
+                const dy = Math.abs(house.y - y);
+                if (dx <= tolerance && dy <= tolerance) {
+                    return `بيت ${house.house}: ${house.degree.toFixed(2)}°`;
+                }
+            }
+            return null;
+        }
+
         document.getElementById("chartForm").addEventListener("submit", async function (event) {
             event.preventDefault();
 
@@ -136,51 +151,18 @@
                 const apiData = await response.json();
                 console.log("API Data:", apiData);
 
-                // Render the chart
                 const chartData = mapApiData(apiData);
                 const chart = new astrochart.Chart("chartContainer", 800, 800);
                 chart.radix(chartData);
+
                 chartContainer.style.display = "block";
 
-                // Add hover events
-                enableHoverEffect(chart, apiData.planets, apiData.houses);
-
+                setupHover(chartContainer, apiData.planets, apiData.houses);
             } catch (error) {
                 console.error("Error fetching or rendering chart data:", error);
                 errorMessage.style.display = "block";
             }
         });
-
-        function enableHoverEffect(chart, planets, houses) {
-            const tooltip = document.getElementById("chartTooltip");
-
-            chart.on("hover", (type, key, data) => {
-                if (type === "planet") {
-                    const planet = planets.find(p => p.name === key);
-                    if (planet) {
-                        showTooltip(event, `${planet.name}: ${planet.position.toFixed(2)}° - ${planet.zodiac_sign}`);
-                    }
-                } else if (type === "house") {
-                    const house = houses.find(h => h.house === parseInt(key, 10));
-                    if (house) {
-                        showTooltip(event, `بيت ${house.house}: ${house.degree.toFixed(2)}°`);
-                    }
-                } else {
-                    hideTooltip();
-                }
-            });
-
-            function showTooltip(event, content) {
-                tooltip.innerHTML = content;
-                tooltip.style.left = `${event.pageX + 10}px`;
-                tooltip.style.top = `${event.pageY + 10}px`;
-                tooltip.style.display = "block";
-            }
-
-            function hideTooltip() {
-                tooltip.style.display = "none";
-            }
-        }
     </script>
 </body>
 </html>
