--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الجدول الفلكي التفاعلي</title>
+    <title>الخريطة الفلكية وجدول البيوت والكواكب</title>
     <script src="https://unpkg.com/@astrodraw/astrochart"></script>
     <style>
         #chartContainer {
@@ -53,6 +53,8 @@
     <div id="chartContainer"></div>
     <h2>بيانات الكواكب والطالع</h2>
     <table id="dataTable" style="display: none;">
+    <!-- Ascendant Display -->
+    <p id="ascendant-text" style="font-size: 18px; font-weight: bold; color: #333;"></p> 
         <thead>
             <tr>
                 <th>الجسم الفلكي</th>
