--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <input type="date" id="birthDate" required>
         <input type="time" id="birthTime" required>
         <input type="text" id="location" placeholder="الموقع (المدينة، الدولة)" required>
-        <button type="submit">إنشاء الرسم البياني</button>
+        <button type="submit">استخرج خريطتي الفلكية</button>
     </form>
     <div id="errorMessage" style="display: none;">فشل تحميل البيانات. يرجى التحقق من الإدخال الخاص بك.</div>
     <div id="chartContainer"></div>
